--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,28 @@
-# ?????? ??
+# 애플리케이션 이름 설정
 spring.application.name=springbootJpaStudy
 
-# MySQL ?? ??
+# MySQL 데이터베이스 설정
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/jpabegin?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
 spring.datasource.username=jpauser
 spring.datasource.password=jpapass
 
-# JPA ??
-# none, validate, update, create, create-drop ? ?? ??
-spring.jpa.hibernate.ddl-auto=update   
-# ??? ???? SQL ??
-spring.jpa.show-sql=true 
-# SQL ???
-spring.jpa.properties.hibernate.format_sql=true  
+# JPA 설정
+# DDL 자동 생성 옵션: none, validate, update, create, create-drop 중 선택
+spring.jpa.hibernate.ddl-auto=update
+
+# 실행되는 SQL 출력 여부
+spring.jpa.show-sql=true
+
+# SQL 포맷팅 (가독성 향상)
+spring.jpa.properties.hibernate.format_sql=true
+
+# 데이터베이스 종류 지정
 spring.jpa.database=mysql
 
-# Connection Pool ?? (HikariCP)
+# Connection Pool 설정 (HikariCP)
 spring.datasource.hikari.maximum-pool-size=5
 
-# Hibernate ?? ??
+# Hibernate SQL 로그 설정
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
